--- a/src/docs/hooks/useCalendarState.mdx
+++ b/src/docs/hooks/useCalendarState.mdx
@@ -12,6 +12,7 @@ import dateAdapter from '@use-date-input/date-fns-adapter';
 
 `useCalendarState` is a hook which will provide the current state of your components.
 
+## Example
 <Playground>
 {() => {
     const DateLabel = () => {
