--- a/src/docs/hooks/useDateAPI.mdx
+++ b/src/docs/hooks/useDateAPI.mdx
@@ -12,6 +12,7 @@ import dateAdapter from '@use-date-input/date-fns-adapter';
 
 `useDateAPI` is a hook which will provide the dateAPI to any child of `CalendarProvider`.
 
+## Example
 <Playground>
 {() => {
     const [selectedDate, setSelectedDate] = useState();
