--- a/src/docs/components/dayOfWeek.mdx
+++ b/src/docs/components/dayOfWeek.mdx
@@ -2,9 +2,18 @@
 name: DayOfWeek
 route: /dayOfWeek
 ---
-# DayOfWeek
+import { Playground } from "docz";
+import { DayOfWeek } from "@use-date-input/core";
 
+# DayOfWeek
 The `DayOfWeek` components renders a day of the week.
+
+In the default implementation, [WeekHeader](https://mark-tate.github.io/use-date-input/weekHeader) is the parent of `DayOfWeek`.
+
+## Example
+<Playground>
+    <DayOfWeek description={'Monday'}>M</DayOfWeek>
+</Playground>
 
 ## Props 
 | Prop Name | Type | Is Required | Default Value | Description |
@@ -12,3 +21,19 @@ The `DayOfWeek` components renders a day of the week.
 | children| `node`| optional| | Day of week node|
 | className| `string`| optional| | Class name of root element|
 | description| `string`| optional| | Day of week expanded label|
+
+## Importing
+It can be imported as either the base component
+
+```javascript
+import { DayOfWeek } from "@use-date-input/core";
+```
+
+or as an overridable component that can be replaced through the `components` prop in `CalendarProvider`.  
+Refer to [How to replace UI components](https://mark-tate.github.io/use-date-input/theming#how-to-replace-ui-components).
+
+```javascript
+import { CustomisableDayOfWeek } from "@use-date-input/core";
+```
+
+If providing your own component, it can be useful to import the base component and use it within your composition.  
