--- a/src/docs/components/monthGroup.mdx
+++ b/src/docs/components/monthGroup.mdx
@@ -2,12 +2,47 @@
 name: MonthGroup
 route: /monthGroup
 ---
-# MonthGroup
+import { Playground } from "docz";
+import { MonthGroup, CalendarProvider, useDateAPI } from "@use-date-input/core";
+import dateAdapter from '@use-date-input/date-fns-adapter';
 
+# MonthGroup
 The `MonthGroup` components renders all the visible calendar `Month` components.
+
+## Example
+<Playground>
+{() => {
+    function MonthGroupExample() {
+        const { createDate } = useDateAPI();
+        const visibleFromDate = createDate();
+        return (<MonthGroup visibleFromDate={visibleFromDate} />);
+    } 
+    return (
+        <CalendarProvider adapter={dateAdapter} numOfVisibleMonths={2} numOfColumns={2}>
+            <MonthGroupExample />
+        </CalendarProvider>
+    );
+}}
+</Playground>
 
 ## Props
 | Prop Name | Type | Is Required | Default Value | Description |
 |-|-|-|-|-|
 | className| `string`| optional| | Class name of root element|
 | visibleFromDate| `object`| optional| | Visible from date |
+
+## Importing
+It can be imported as either the base component
+
+```javascript
+import { MonthGroup } from "@use-date-input/core";
+```
+
+or as an overridable component that can be replaced through the `components` prop in `CalendarProvider`.  
+Refer to [How to replace UI components](https://mark-tate.github.io/use-date-input/theming#how-to-replace-ui-components).
+
+```javascript
+import { CustomisableMonthGroup } from "@use-date-input/core";
+```
+
+If providing your own component, it can be useful to import the base component and use it within your composition.  
