--- a/src/docs/components/week.mdx
+++ b/src/docs/components/week.mdx
@@ -2,13 +2,48 @@
 name: Week
 route: /week
 ---
-# Week
+import { Playground } from "docz";
+import { CalendarProvider, Week } from "@use-date-input/core";
+import dateAdapter from '@use-date-input/date-fns-adapter';
 
+# Week
 The `Week` components renders a week, as a row of `Day` components based on the current `Calendar` state.
+
+## Example
+<Playground>
+{() => {
+    const { addDays, createDate } = dateAdapter();
+    const today = createDate();
+    const days = Array(7).fill(0).reduce((result, day, dayIndex) => {
+       return [ ...result, addDays(today, dayIndex)];
+    }, []);
+    return (
+        <CalendarProvider adapter={dateAdapter}>
+            <Week days={days} parentMonth={today} />
+        </CalendarProvider>
+    );
+}}
+</Playground>
 
 ## Props 
 | Prop Name | Type | Is Required | Default Value | Description |
 |-|-|-|-|-|
 | className| `string`| optional| | Class name of root element |
-| days| `array`| optional| | Array of dates to render |
-| parentMonth| `object`| optional| | parentMonth |
+| days| `array`| required| | Array of dates to render |
+| parentMonth| `object`| required| | to determine days of weeks, which are outside of current month |
+
+## Importing
+It can be imported as either the base component
+
+```javascript
+import { Week } from "@use-date-input/core";
+```
+
+or as an overridable component that can be replaced through the `components` prop in `CalendarProvider`.  
+Refer to [How to replace UI components](https://mark-tate.github.io/use-date-input/theming#how-to-replace-ui-components).
+
+```javascript
+import { Week } from "@use-date-input/core";
+```
+
+If providing your own component, it can be useful to import the base component and use it within your composition.  
