--- a/src/docs/date-frameworks.mdx
+++ b/src/docs/date-frameworks.mdx
@@ -13,14 +13,12 @@ import momentAdapter from "@use-date-input/moment-adapter"
 
 # Date Frameworks
 
-`use-date-input` provides an adapter API so that it can work with any date frameworks.
-
-To keep the bundle size low and to let the user manage dependencies, the provided adapters  
-require peer dependencies to specify the date API.
+`use-date-input` provides an adapter API that enables it to work with any date framework.
 
 The adapter interface is provided to `use-date-input` components through the `adapter` prop.
 
-Adapters have been created for all the popular Date frameworks
+Adapters have been created for all the popular Date frameworks. To keep the bundle size low and to let the user manage versioning, the provided adapters 
+require peer dependencies to specify the date API.
 
 - <a href="https://date-fns.org/" target="__blank__">date-fns</a>
 - <a href="https://day.js.org/" target="__blank__">dayjs</a>
@@ -53,15 +51,16 @@ Use the `adapter` prop with the `use-date-input` components.
 
 <Playground>
 { () => {
-        return (
-            <Calendar
-                adapter={dateFnsAdapter}
-                numOfColumns={2}
-                numOfVisibleMonths={2}
-            />
-        );
-    }
-}
+    // import { Calendar } from "@use-date-input/core";
+    // import dateFnsAdapter from "@use-date-input/date-fns-adapter";
+    return (
+        <Calendar
+            adapter={dateFnsAdapter}
+            numOfColumns={2}
+            numOfVisibleMonths={2}
+        />
+    );
+}}
 </Playground>
 
 ##  With dayjs
@@ -89,15 +88,16 @@ Use the `adapter` prop with the `use-date-input` components.
 
 <Playground>
 { () => {
-        return (
-            <Calendar
-                adapter={dayjsAdapter}
-                numOfColumns={2}
-                numOfVisibleMonths={2}
-            />
-        );
-    }
-}
+    // import { Calendar } from "@use-date-input/core";
+    // import dayjsAdapter from "@use-date-input/dayjs-adapter";
+    return (
+        <Calendar
+            adapter={dayjsAdapter}
+            numOfColumns={2}
+            numOfVisibleMonths={2}
+        />
+    );
+}}
 </Playground>
 
 ##  With luxon
@@ -125,15 +125,16 @@ Use the `adapter` prop with the `use-date-input` components.
 
 <Playground>
 { () => {
-        return (
-            <Calendar
-                adapter={luxonAdapter}
-                numOfColumns={2}
-                numOfVisibleMonths={2}
-            />
-        );
-    }
-}
+    // import { Calendar } from "@use-date-input/core";
+    // import luxonAdapter from "@use-date-input/luxon-adapter";
+    return (
+        <Calendar
+            adapter={luxonAdapter}
+            numOfColumns={2}
+            numOfVisibleMonths={2}
+        />
+    );
+}}
 </Playground>
 
 ##  With moment
@@ -161,15 +162,16 @@ Use the `adapter` prop with the `use-date-input` components.
 
 <Playground>
 { () => {
-        return (
-            <Calendar
-                adapter={momentAdapter}
-                numOfColumns={2}
-                numOfVisibleMonths={2}
-            />
-        );
-    }
-}
+    // import { Calendar } from "@use-date-input/core";
+    // import momentAdapter from "@use-date-input/moment-adapter";
+    return (
+        <Calendar
+            adapter={momentAdapter}
+            numOfColumns={2}
+            numOfVisibleMonths={2}
+        />
+    );
+}}
 </Playground>
 
 ##  Week Offset
@@ -178,16 +180,17 @@ Date frameworks use different week offsets, so you can customize on `use-date-in
 
 <Playground>
 { () => {
-        return (
-            <Calendar
-                adapter={luxonAdapter}
-                numOfColumns={2}
-                numOfVisibleMonths={2}
-                weekOffset={6}
-            />
-        );
-    }
-}
+    // import { Calendar } from "@use-date-input/core";
+    // import luxonAdapter from "@use-date-input/luxon-adapter";
+    return (
+        <Calendar
+            adapter={luxonAdapter}
+            numOfColumns={2}
+            numOfVisibleMonths={2}
+            weekOffset={6}
+        />
+    );
+}}
 </Playground>
 
 ##  Write Your Own Adapter
@@ -227,7 +230,7 @@ const adaptDateAPI = ({ weekOffset = 0 } = {}) => ({
 });
 ```
 
-For the most part this is just, mapping these callbacks to the equivalent date framework call.  
+For the most cases, this just requires mapping these callbacks to the equivalent date framework call.  
   
-For further details, refer to the provided adapters to see an example in code.
-[dayjs](https://github.com/mark-tate/use-date-input/blob/master/packages/date-fns-adapter/src/index.js)
+For further examples, refer to the provided adapters code, such as 
+[@use-date-input/dayjs-adapter](https://github.com/mark-tate/use-date-input/blob/master/packages/date-fns-adapter/src/index.js).
