--- a/src/docs/getting-started.mdx
+++ b/src/docs/getting-started.mdx
@@ -2,17 +2,22 @@
 name: Getting Started
 route: /getting-started
 ---
+import { useRef, useState } from 'react';
+import { Playground } from "docz";
+import { Calendar, useDateInput } from '@use-date-input/core';
+import { dateAdapter } from "../gatsby-theme-docz/createDate";
+import { parse } from 'date-fns';
 
-## Quick Setup
+## Getting Started
 
-`use-date-input` can be used with any of the popular date frameworks with an adapter.
+A Date Picker can consist of an `input` and a `Calendar` or just a `Calendar`.  
+`use-date-input` uses an adapter API so that it can be used with any date framework.  
+`use-date-input` provides pre-made adapters for the most popular frameworks or you can write your own.
 
 - <a href="https://date-fns.org/" target="__blank__">date-fns</a>
 - <a href="https://day.js.org/" target="__blank__">dayjs</a>
 - <a href="https://moment.github.io/luxon/" target="__blank__">luxon</a>
 - <a href="https://momentjs.com/" target="__blank__">moment</a>
-
-Ensure you have added both the date framework and the corresponsing `use-date-input` adapter.
 
 ### For date-fns users
 
@@ -50,47 +55,44 @@ yarn add @use-date-input/moment-adapter
 yarn add styled-components 
 ```
 
-## Using the Components without Hooks
+## Calendar Example  
 
-A very basic example of `Calendar` component.
+A basic example of the `Calendar` component.
 
-```javascript
-import { Calendar } from '@use-date-input/core';
+<Playground>
+{() => {
+    // import { Calendar } from '@use-date-input/core';
+    // import dateAdapter from '@use-date-input/date-fns-adapter';
+    function handleCalendarChange (newSelectedDate) {
+       console.log('calendar changed selected date', newSelectedDate);
+    }
+    return (<Calendar adapter={dateAdapter} onCalendarChange={handleCalendarChange}/>);
+}}
+</Playground>
 
-function oneMonthCalendar() {
-    const handleChange = newSelectedDate => console.log('calendar changed selected date', newSelectedDate);
-    return (<Calendar adapter={dateAdapter} onChange={handleChange}/>);
-}
-```
+## Input & Calendar Example  
 
-### Basic Date Input Example  
+A basic example of the `useDateInput` hook, linking an HTML `input` and the `Calendar` component.
 
-A very basic example of `useDateInput` hook, linking an HTML `input` and the `Calendar` component.
-
-```javascript
-import React, { useRef, useState } from 'react';
-import { useDateInput } from "./index.esm";
-import dateFnsAdapter from "./index.esm";
-import { parse } from 'date-fns';
-
-const defaultParseDate = value => parse(value, 'dd/MM/yyyy', new Date());
-
-function oneMonthDateInput() {
+<Playground>
+{() => {
+    // import { useRef, useState } from 'react';
+    // import { useDateInput } from "@use-date-input/core";
+    // import dateAdapter from "@use-date-input/date-fns-adapter";
+    // import { parse } from 'date-fns';
+    const defaultParseDate = value => parse(value, 'dd/MM/yyyy', new Date());
     const [date, setDate] = useState('');
     const actions = useRef();
-
-    const handleInputChange = event => {
+    function handleInputChange(event) {
         const { value } = event.target;
         console.log('input changed to', value);
         setDate(event.target.value);
-    };
-
-    const handleCalendarChange = newSelectedDate => {
+    }
+    function handleCalendarChange(newSelectedDate) {
         console.log('calendar changed selected date', newSelectedDate);
         const { dateAPI } = actions.current;
         setDate(dateAPI.format(newSelectedDate, 'dd/MM/yyyy'));
-    };
-
+    }
     const {
         Calendar,
         CalendarProvider,
@@ -100,13 +102,12 @@ function oneMonthDateInput() {
         actions,
         parse: defaultParseDate
     });
-
     return (
         <>
             <input {...getInputProps({ onChange: handleInputChange })} value={date} />
             <CalendarProvider
                 {...getCalendarProviderProps({
-                    adapter: dateFnsAdapter,
+                    adapter: dateAdapter,
                     onCalendarChange: handleCalendarChange,
                 })}
             >
@@ -114,6 +115,6 @@ function oneMonthDateInput() {
             </CalendarProvider>
         </>
     );
-}
-```
+}}
+</Playground>
 
